# Data-Engineering-Programming

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
data/output/relatorio_recusados_2025/: .part-00000-4cd33fdc-bc3a-47d2-b5b6-aad599f035b8-c000.snappy.parquet.crc  .part-00000-4d1674fa-dd62-4fd6-a7ab-2f39b21201af-c000.snappy.parquet.crc  .part-00000-8a26eef1-bf7a-4fc6-ba9f-d0ce9b2c2237-c000.csv.crc  part-00000-4cd33fdc-bc3a-47d2-b5b6-aad599f035b8-c000.snappy.parquet  part-00000-4d1674fa-dd62-4fd6-a7ab-2f39b21201af-c000.snappy.parquet  part-00000-8a26eef1-bf7a-4fc6-ba9f-d0ce9b2c2237-c000.csv
src/: business_logic.py  main.py
src/config/: app_config.py
src/io_utils/: data_reader.py  data_writer.py
src/pipeline/: pipeline_orchestrator.py
src/schema/: schemas.py
src/spark/: spark_manager.py
src/tests/: test_logic.py
