[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_engineering_pyspark"
version = "1.0.0"
description = "Trabalho Final - Relatório de Pedidos 2025"
authors = [
    {name = "Gabriel de Almeida Gava", rm = "369149"},
    {name = "Geovanna Dos Santos Medeiros", rm = "366820"},
    {name = "Guilherme José Pereira Ratini", rm = "368877"},
    {name = "Riuler Machado Mendes", rm = "367133"}
]
dependencies = [
    "pyspark>=3.5.0",
    "pytest==7.4.0"
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]